apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  ingressClassName: nginx
  tls: 
    - hosts:
        - whoami.nerv.local
      secretName: whoami-tls
  rules:
  - host: whoami.nerv.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: whoami
            port: 
              number: 80
